[FIX] login: scrollbar overflow

--- a/fitness_app/src/components/Login/Login.css
+++ b/fitness_app/src/components/Login/Login.css
@@ -3,12 +3,17 @@
 }
 /* refernece the page / login.jsx */
 
+/* .body {
+    overflow: hidden;
+} */
+
 .page {
     display: flex;
     justify-content: center;
     align-items: center;
     width: 100%;
     height: 100vh;
+
 }
 
 .container {
